--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,24 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_amongus_nuevo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_amongus_nuevo"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppBar"
         tools:targetApi="31">
+        <activity
+            android:name=".ResultadoRefrescar"
+            android:exported="false" />
+        <activity
+            android:name=".ResultadoBuscar"
+            android:exported="false" />
+        <activity
+            android:name=".ResultadoCopiar"
+            android:exported="false" />
+        <activity
+            android:name=".Resultado"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
